@startuml

title __CLASSES's Class Diagram__\n

  package  {
    class Book {
        - author : String
        - title : String
        - weight : double
        + Book()
        + weight()
        + toString()
    }
  }
  

  package  {
    class Box {
        - maxWeight : double
        - things : ArrayList<ToBeStored>
        + Box()
        + add()
        + weight()
        + toString()
    }
  }
  

  package  {
    class CD {
        - artist : String
        - song : String
        - year : int
        - weight : double
        + CD()
        + weight()
        + toString()
    }
  }
  

  package  {
    class Main {
        + Main()
        {static} + main()
    }
  }
  

  package  {
    interface ToBeStored {
        {abstract} + weight()
    }
  }
  

  Book -up-|> ToBeStored
  Box -up-|> ToBeStored
  CD -up-|> ToBeStored


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
